--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": ">=14 <15"
+    "node": ">=16.20.1"
   },
   "repository": {
     "type": "git",
